--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,24 @@
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
-<<<<<<< HEAD
+cryptography==40.0.1
 distlib==0.3.6
-filelock==3.10.5
-=======
->>>>>>> main
+filelock==3.9.0
 Flask==2.2.3
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jwt==1.3.1
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 packaging==23.0
-<<<<<<< HEAD
-PyMySQL==1.0.3
-=======
-<<<<<<< HEAD
-platformdirs==3.2.0
+platformdirs==3.1.1
+pycparser==2.21
 PyMySQL==1.0.2
 six==1.16.0
 SQLAlchemy==2.0.7
 typing_extensions==4.5.0
 virtualenv==20.21.0
-=======
-PyMySQL==1.0.2
->>>>>>> 3bc3076ae23cdb844b2e311039e5eed71ec9a14d
-six==1.16.0
-SQLAlchemy==2.0.7
-typing_extensions==4.5.0
->>>>>>> main
 Werkzeug==2.2.3
